--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/localizations": "^1.26.12",
     "@clerk/nextjs": "^4.27.6",
     "@clerk/themes": "^1.7.9",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-core": "^0.7.1",
     "class-variance-authority": "^0.7.0",
