--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@clerk/themes": "^1.7.9",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-core": "^0.7.1",
+    "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "drizzle-orm": "^0.29.1",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
