feat(dashboard): add webhooks

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 
 DATABASE_URL=
+
+SVIX_WEBHOOK_CLERK_SECRET=
+SVIX_AUTH_TOKEN=
+SVIX_PORTAL_URL=
