--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "db:push": "drizzle-kit push:pg",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "webhooks": "pnpm ngrok http 3000"
   },
   "dependencies": {
     "@clerk/localizations": "^1.26.12",
@@ -30,6 +31,8 @@
     "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "svix": "^1.15.0",
+    "svix-react": "^1.9.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
@@ -42,6 +45,7 @@
     "drizzle-kit": "^0.20.6",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "ngrok": "5.0.0-beta.2",
     "pg": "^8.11.3",
     "postcss": "^8",
     "prettier": "^3.1.1",
