--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
     "@clerk/localizations": "^1.26.12",
     "@clerk/nextjs": "^4.27.6",
     "@clerk/themes": "^1.7.9",
+    "@fnando/cnpj": "^1.0.2",
+    "@hookform/resolvers": "^3.3.2",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-core": "^0.7.1",
     "@tanstack/react-table": "^8.10.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "downshift": "^8.2.3",
     "drizzle-orm": "^0.29.1",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
@@ -31,6 +36,8 @@
     "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.0",
+    "server-only": "^0.0.1",
     "svix": "^1.15.0",
     "svix-react": "^1.9.0",
     "tailwind-merge": "^2.1.0",
