--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fnando/cnpj": "^1.0.2",
     "@hookform/resolvers": "^3.3.2",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -25,6 +26,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-core": "^0.7.1",
     "@tanstack/react-table": "^8.10.7",
+    "@unkey/api": "^0.13.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
